<resources>
    <string name="app_name">Gym Buddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_exercise">NewExercise</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="exercise_name">Name</string>
    <string name="exercise_image">Exercise Image</string>
    <string name="targets_button">Targets</string>
    <string name="search_hint">Search exercises</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="weight">Weight:</string>
    <string name="lbs">lbs</string>
    <string name="sets">Sets:</string>
    <string name="reps">Reps:</string>
</resources>
