<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/createExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:src="@drawable/ic_check_white"
        app:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/exerciseNameLayout"
        android:layout_width="188dp"
        android:layout_height="94dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseImage">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/exerciseNameText"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_name" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/exerciseImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="@string/exercise_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Spinner
        android:id="@+id/exerciseCategory"
        android:layout_width="326dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseNameLayout" />

    <Button
        android:id="@+id/targetsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/targets_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseCategory" />

    <TextView
        android:id="@+id/targetsText"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:autoText="false"
        android:gravity="center"
        android:maxLines="20"
        android:minLines="1"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetsButton" />

</android.support.constraint.ConstraintLayout>